<resources>

    <string name="app_name">SafeMe</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_alerts">SaveMe</string>
    <!--<string name="title_activity_alets">AlertsActivity</string>-->
    <string name="API_KEY">AIzaSyASnlTsJA2EyWuh2b_6LRO0TOQPMa4m0Qw</string>
    <string name="bomb">Bomb</string>
    <string name="rapist">Attack</string>
    <string name="other_alerts">Other Alerts</string>
    <string name="amber_alert">Amber</string>
    <string name="active_shooter">Active Shooter</string>
    <string name="title_activity_login">login</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_description">Description</string>
    <string name="EmailAddress"> Email Address</string>
    <string name="Password"> Password</string>
    <string name="Signup">SIGN UP</string>
    <string name="ConfirmPassword"> Confirm Password</string>
    <string name="Login">Login</string>
    <string name="FirstName">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="Ethnicity">Ethnicity</string>
    <string name="Age">Age</string>
    <string name="Gender">Gender</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="help">Help</string>
</resources>
