<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background = "@drawable/gradient"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="145dp"
        android:layout_height="113dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="safemelogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/lifesaver" />

    <Button
        android:id="@+id/regActButton"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/roundstylebutton"
        android:text="Register"
        android:textColor="#eaedf2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.659"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/regFirstName"
        android:layout_width="335dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/FirstName"
        android:inputType="textPersonName"
        android:textColorHint="#eaedf2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <EditText
        android:id="@+id/regLastName"
        android:layout_width="335dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/LastName"
        android:inputType="textPersonName"
        android:textColorHint="#eaedf2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regFirstName" />

    <EditText
        android:id="@+id/regEthnicity"
        android:layout_width="335dp"
        android:layout_height="51dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/Ethnicity"
        android:inputType="textPersonName"
        android:textColorHint="#eaedf2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regLastName" />

    <EditText
        android:id="@+id/regAge"
        android:layout_width="160dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/Age"
        android:inputType="number"
        android:textColorHint="#eaedf2"
        app:layout_constraintBottom_toTopOf="@+id/regActButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toEndOf="@+id/regGender"
        app:layout_constraintTop_toBottomOf="@+id/regEthnicity"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/regGender"
        android:layout_width="160dp"
        android:layout_height="46dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/Gender"
        android:inputType="textPersonName"
        android:textColorHint="#eaedf2"
        app:layout_constraintBottom_toTopOf="@+id/regActButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regEthnicity"
        app:layout_constraintVertical_bias="0.0" />
</android.support.constraint.ConstraintLayout>